--- a/index.css
+++ b/index.css
@@ -1,17 +1,27 @@
-body {
-  background-color: #2c3e50;
-}
-
-.btn {
-  cursor: pointer;
+* {
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-  color: #34495e;
+  height: 97vh;
+  background-color: #0054a8;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.clicked {
-  color: #7f8c8d;
+.js-function {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.js-clock {
+  font-size: 60px;
 }
 
 .form,
@@ -21,6 +31,81 @@ body {
 
 .showing {
   display: block;
+}
+
+.js-form input {
+  border-bottom: 5px solid white;
+  background-color: transparent;
+  text-align: center;
+  font-size: 30px;
+  color: white;
+  border-right: 0px;
+  border-top: 0px;
+  border-left: 0px;
+  margin-bottom: 50px;
+  padding-bottom: 10px;
+}
+
+.js-form input::placeholder {
+  color: white;
+}
+
+.js-form input:focus {
+  outline: none;
+}
+
+.greetings {
+  font-size: 40px;
+}
+
+.js-toDoForm input {
+  border-bottom: 5px solid white;
+  background-color: transparent;
+  text-align: center;
+  font-size: 30px;
+  color: white;
+  border-right: 0px;
+  border-top: 0px;
+  border-left: 0px;
+  padding-bottom: 10px;
+}
+
+.js-toDoForm input::placeholder {
+  color: white;
+}
+
+.js-toDoForm input:focus {
+  outline: none;
+}
+
+.js-toDoList {
+  display: flex;
+  flex-direction: column;
+}
+
+.js-toDoList li {
+  width: 100%;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.js-toDoList span {
+  margin-left: 20px;
+  font-size: 20px;
+}
+
+.js-weather {
+  margin-top: 30px;
+  font-size: 15px;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+.clicked {
+  color: #7f8c8d;
 }
 
 @keyframes fadeIn {
